[workspace]

members = ["client"]


[package]
name = "vara-delay-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
vara-delay-counter-app = { path = "app" }

[build-dependencies]
vara-delay-counter-app = { path = "app" }
sails-rs = { version = "0.7.1", features = ["wasm-builder"] }
sails-idl-gen = "0.7.1"

[dev-dependencies]
vara-delay-counter = { path = ".", features = ["wasm-binary"] }
vara-delay-counter-client = { path = "client" }
sails-rs = { version = "0.7.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
